--- a/equipos/getafe/getafe.html
+++ b/equipos/getafe/getafe.html
@@ -282,24 +282,6 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
-            <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
-                </img>
-
-                <h2>Hugo Sotelo</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
-            </div><!-- /.col-lg-4 -->
-
-            <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
-                </img>
-
-                <h2>Hugo Álvaraz</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
-            </div><!-- /.col-lg-4 -->
-
 
         </div><!-- /.row -->
 
@@ -316,23 +298,23 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
                 </img>
 
-                <h2>Carles Perez</h2>
-                <h5>Extremo</h5>
+                <h2>Jaime Mata</h2>
+                <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
                 </img>
 
-                <h2>Iago Aspas</h2>
-                <h5>Delantero centro</h5>
+                <h2>Mason Greenwood</h2>
+                <h5>Extremo</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
                 </img>
 
-                <h2>Tasos Douvikas</h2>
+                <h2>Juanmi Latasa</h2>
                 <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -347,19 +329,11 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
                 </img>
 
-                <h2>Jonathan Bamba</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
-            </div><!-- /.col-lg-4 -->
-
-            <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
-                </img>
-
-                <h2>Jørgen Strand Larsen</h2>
+                <h2>Borja Mayoral</h2>
                 <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
+
             
         </div><!-- /.row -->
 
