--- a/equipos/cadiz/cadiz.html
+++ b/equipos/cadiz/cadiz.html
@@ -107,7 +107,7 @@
 
         <div class="row text-center">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/conanLedesma.png">
                 </img>
 
                 <h2>Conan Ledesma</h2>
@@ -115,7 +115,7 @@
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/davidGil.png">
                 </img>
 
                 <h2>David Gil</h2>
@@ -133,7 +133,7 @@
 
         <div class="row text-center" id="defensa">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/josebaZaldua.png">
                 </img>
 
                 <h2>Joseba Zaldúa</h2>
@@ -141,7 +141,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/fali.png">
                 </img>
 
                 <h2>Fali</h2>
@@ -149,7 +149,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/victorChust.png">
                 </img>
 
                 <h2>Victor chust</h2>
@@ -164,7 +164,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/momoMbaye.png">
                 </img>
 
                 <h2>Momo Mbaye</h2>
@@ -172,7 +172,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/javiHernandez.png">
                 </img>
 
                 <h2>Javi Hernández</h2>
@@ -180,7 +180,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/izaCaarcelen.png">
                 </img>
 
                 <h2>Iza Carcelén</h2>
@@ -190,7 +190,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/jorggeMere.png">
                 </img>
 
                 <h2>Jorge Meré</h2>
@@ -198,7 +198,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/luisHernandez.png">
                 </img>
 
                 <h2>Luis Hernández</h2>
@@ -206,7 +206,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/lucasPires.png">
                 </img>
 
                 <h2>Lucas Pires</h2>
@@ -225,7 +225,7 @@
 
         <div class="row text-center" id="mediocentros">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/fedeSanEmeterio.png">
                 </img>
 
                 <h2>Fede San Emeterio</h2>
@@ -233,7 +233,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/joseMariMartin.png">
                 </img>
 
                 <h2>José Mari Martín</h2>
@@ -241,7 +241,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/rubenAlcaraz.png">
                 </img>
 
                 <h2>Rubén Alcaraz</h2>
@@ -256,7 +256,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/alexFernandez.png">
                 </img>
 
                 <h2>Álex Fernandez</h2>
@@ -264,7 +264,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/ivanAlejo.png">
                 </img>
 
                 <h2>Iván Alejo</h2>
@@ -273,7 +273,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/rominigueKouame.png">
                 </img>
 
                 <h2>Rominigue Kouamé</h2>
@@ -281,7 +281,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/gonzaloEscalante.png">
                 </img>
 
                 <h2>Gonzalo Escalante</h2>
@@ -302,7 +302,7 @@
 
         <div class="row text-center" id="delantero">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/rubenSobrino.png">
                 </img>
 
                 <h2>Rubén Sobrino</h2>
@@ -310,7 +310,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/brianOcampo.png">
                 </img>
 
                 <h2>Brian Ocampo</h2>
@@ -318,7 +318,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/chrisRamos.png">
                 </img>
 
                 <h2>Chris ramos</h2>
@@ -333,7 +333,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/darwinMachis.png">
                 </img>
 
                 <h2>Darwin Machis</h2>
@@ -342,7 +342,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/segiGuardiola.png">
                 </img>
 
                 <h2>Sergi Guardiola</h2>
@@ -351,7 +351,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/rogerMarti.png">
                 </img>
 
                 <h2>Roger Martí</h2>
@@ -360,7 +360,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/maxiGomez.png">
                 </img>
 
                 <h2>Maxi Gómez</h2>
